feat: add new features

--- a/app.json
+++ b/app.json
@@ -1,11 +1,10 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/list/list",
+    "pages/category/category",
     "pages/cart/cart",
     "pages/mine/mine",
-    "pages/detail/detail",
-    "pages/category/category"
+    "pages/map/map"
   ],
   "window": {
     "navigationBarBackgroundColor": "#09bb07",
@@ -15,33 +14,33 @@
     "backgroundTextStyle": "light"
   },
   "tabBar": {
-    "color": "#858585",
-    "selectedColor": "#008842",
+    "color": "#8a8a8a",
+    "selectedColor": "#09bb07",
     "backgroundColor": "#ffffff",
     "borderStyle": "black",
     "list": [
       {
         "pagePath": "pages/index/index",
-        "iconPath": "images/icons/btn-tabs_01.png",
-        "selectedIconPath": "images/icons/btn-tabs_07.png",
+        "iconPath": "images/icons/tab1.png",
+        "selectedIconPath": "images/icons/tab1_active.png",
         "text": "首页"
       },
       {
         "pagePath": "pages/category/category",
-        "iconPath": "images/icons/btn-tabs_03.png",
-        "selectedIconPath": "images/icons/btn-tabs_08.png",
+        "iconPath": "images/icons/tab2.png",
+        "selectedIconPath": "images/icons/tab2_active.png",
         "text": "分类"
       },
       {
         "pagePath": "pages/cart/cart",
-        "iconPath": "images/icons/btn-tabs_05.png",
-        "selectedIconPath": "images/icons/btn-tabs_09.png",
+        "iconPath": "images/icons/tab3.png",
+        "selectedIconPath": "images/icons/tab3_active.png",
         "text": "购物车"
       },
       {
         "pagePath": "pages/mine/mine",
-        "iconPath": "images/icons/btn-tabs_06.png",
-        "selectedIconPath": "images/icons/btn-tabs_10.png",
+        "iconPath": "images/icons/tab4.png",
+        "selectedIconPath": "images/icons/tab4_active.png",
         "text": "我的"
       }
     ]
